@@ -5,6 +5,11 @@ CHANGELOG
    Those changes are not all listed here.
 ** For a while this is going to ONLY INCLUDE BREAKING CHANGES.
 
+2024/12/04:
+- TestEngine: fixed an issue with v1.91.1 where ImGuiPlatformMonitor array
+  pointer was invalidated at end of a test, which would affect code taking
+  pointers to Monitors[].
+
 2024/11/27:
 - TestEngine: updated for internal changes in v1.91.6.
 
